[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/objects/stairs/Stair.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/objects/stairs/LinkedStairs.gd" type="Script" id=2]
[ext_resource path="res://source/levels/levelHelpers/SceneTransitor.tscn" type="PackedScene" id=3]



[node name="LinkedStairs" type="Node2D"]
script = ExtResource( 2 )

[node name="Stair1" parent="." instance=ExtResource( 1 )]
position = Vector2( -21.703, 1.78381 )

[node name="Stair2" parent="." instance=ExtResource( 1 )]
position = Vector2( 23.4868, 1.48651 )

[node name="SceneTransitor" parent="." instance=ExtResource( 3 )]
